--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@ header h2 span {
 
 }
 
-/*----Chart Styles */
+/*----UsersChart Styles */
 
 @media only screen and (min-width: 930px) {
 
@@ -74,7 +74,7 @@ header h2 span {
   }
 }
 
-/* Bar Chart Styles */
+/* Bar UsersChart Styles */
 
 
 
@@ -91,7 +91,7 @@ header h2 span {
   margin-top: 5rem;
 }
 
-/* Pie Chart Styles */
+/* Pie UsersChart Styles */
 
 .company-pie {
   width: 50vw;
